<guide> - 팝업추가 <page> - 8/23 미리 전달( 월요일 개인적 일정으로 미리 전달) - 팝업 버튼 span tag-> button tag로 변경

--- a/guide/elements.html
+++ b/guide/elements.html
@@ -42,8 +42,8 @@
                         <!-- <li><a href="#search">Search Group</a></li> -->
                         <li><a href="#tabletitle">TableTitle</a></li>
                         <li><a href="#table">Table</a></li>
-                        <!-- <li><a href="#popup">Popup</a></li>
-                        <li><a href="#etc">Etc</a></li> -->
+                        <li><a href="#popup">Popup</a></li>
+                        <!-- <li><a href="#etc">Etc</a></li> -->
                     </ul>
                 </div>
             </div>
