--- a/guide/elements/list.html
+++ b/guide/elements/list.html
@@ -133,6 +133,44 @@
         </div>
     </div>
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">List box(Half center)</p>
+        </div>
+        <div class="g-example-body ">
+            <ul class="list-box gray-box half has-bar">
+                <li class="list">
+                    <span class="label">출금 대기</span>
+                    <span class="desc"><span class="point">3</span><span class="unit">건</span></span>
+                </li>
+                <li class="list">
+                    <span class="label">출금중</span>
+                    <span class="desc"><span class="point">2</span><span class="unit">건</span></span>
+                </li>
+            </ul>     
+            <ul class="pop-guide">
+                <li class="list">* 해지와 동시에 출금대기건은 삭제되며 출금중인 건은 정상적으로 처리됩니다.</li>
+            </ul>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;ul class="list-box gray-box half has-bar">
+    &lt;li class="list">
+        &lt;span class="label">출금 대기&lt;/span>
+        &lt;span class="desc">&lt;span class="point">3&lt;/span>&lt;span class="unit">건&lt;/span>&lt;/span>
+    &lt;/li>
+    &lt;li class="list">
+        &lt;span class="label">출금중&lt;/span>
+        &lt;span class="desc">&lt;span class="point">2&lt;/span>&lt;span class="unit">건&lt;/span>&lt;/span>
+    &lt;/li>
+&lt;/ul>     
+&lt;ul class="pop-guide">
+    &lt;li class="list">* 해지와 동시에 출금대기건은 삭제되며 출금중인 건은 정상적으로 처리됩니다.&lt;/li>
+&lt;/ul>
+            </code></pre>
+        </div>
+    </div>
+
 
     <div class="g-example-wrap">
         <div class="g-example-head">
@@ -203,6 +241,94 @@
         &lt;div class="list">
             &lt;span class="label has-bar">상담내용&lt;/span>
             &lt;span class="desc">효성에프엠에스 요청사항입니다.&lt;/span>
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">List box (가로정렬)</p>
+        </div>
+        <div class="g-example-body ">
+            <div class="list-wrap">
+                <div class="list-box history row">
+                    <span class="badge pink">차단</span>
+                    <div class="list">
+                        <span class="label has-bar">등록일</span>
+                        <span class="desc">2021/05/20 14:29:57</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">사유</span>
+                        <span class="desc">차단사유입니다.<br/>
+                            차단사유입니다.<br/>
+                            차단사유입니다.
+                        </span>
+                    </div>
+                </div>
+                <div class="list-box history row">
+                    <span class="badge blue">등록</span>
+                    <div class="list">
+                        <span class="label has-bar">등록일</span>
+                        <span class="desc">2021/05/20 14:29:57</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">사유</span>
+                        <span class="desc">차단사유입니다.</span>
+                    </div>
+                </div>
+                <div class="list-box history row">
+                    <span class="badge blue">등록</span>
+                    <div class="list">
+                        <span class="label has-bar">등록일</span>
+                        <span class="desc">2021/05/20 14:29:57</span>
+                    </div>
+                    <div class="list">
+                        <span class="label has-bar">사유</span>
+                        <span class="desc">차단사유입니다.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="list-wrap">
+    &lt;div class="list-box history row">
+        &lt;span class="badge pink">차단&lt;/span>
+        &lt;div class="list">
+            &lt;span class="label has-bar">등록일&lt;/span>
+            &lt;span class="desc">2021/05/20 14:29:57&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">사유&lt;/span>
+            &lt;span class="desc">차단사유입니다.&lt;br/>
+                차단사유입니다.&lt;br/>
+                차단사유입니다.
+            &lt;/span>
+        &lt;/div>
+    &lt;/div>
+    &lt;div class="list-box history row">
+        &lt;span class="badge blue">등록&lt;/span>
+        &lt;div class="list">
+            &lt;span class="label has-bar">등록일&lt;/span>
+            &lt;span class="desc">2021/05/20 14:29:57&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">사유&lt;/span>
+            &lt;span class="desc">차단사유입니다.&lt;/span>
+        &lt;/div>
+    &lt;/div>
+    &lt;div class="list-box history row">
+        &lt;span class="badge blue">등록&lt;/span>
+        &lt;div class="list">
+            &lt;span class="label has-bar">등록일&lt;/span>
+            &lt;span class="desc">2021/05/20 14:29:57&lt;/span>
+        &lt;/div>
+        &lt;div class="list">
+            &lt;span class="label has-bar">사유&lt;/span>
+            &lt;span class="desc">차단사유입니다.&lt;/span>
         &lt;/div>
     &lt;/div>
 &lt;/div>
