--- a/pages/SA/SA020201_03_3.html
+++ b/pages/SA/SA020201_03_3.html
@@ -17,7 +17,7 @@
             <div data-include-path="../layout/lnb.html"></div>
              <!-- Contents -->
              <main class="contents-wrap">
-                <span id="show" data-role="button" data-bind="click: show, enabled: isEnabled">Popup Button</span>
+                <button id="show" data-role="button" data-bind="click: show, enabled: isEnabled">Popup Button</button>
             </main>
         </div>
 
