--- a/pages/SA/SA070302_2.html
+++ b/pages/SA/SA070302_2.html
@@ -21,70 +21,45 @@
             </main>
         </div>
         <div data-role="dialog"
-             data-title="본사 등록/수정"
+             data-title="해지계좌 복원"
              data-modal="false"
              data-bind="dialogOpen: isVisible,
                             events: { close: onClose}"
             class="md">
             <div class="content-group">
+                <div class="title-box xsm mt-0">
+                    <h4 class="sub-title">처리결과</h4>
+                </div>
                 <div class="table">
                     <table>
                         <colgroup>
-                            <col width="90px">
-                            <col width="*">
-                            <col width="90px">
-                            <col width="*">
+                            <col width="80px" />
+                            <col width="*" />
                         </colgroup>
                         <tbody>
                             <tr>
-                                <th scope="row">본사ID<span class="required">*</span></th>
-                                <td>
-                                    <div class="form-set">
-                                        <input type="text" class="h-input" placeholder="" />
-                                        <button data-role="button" class="blue-border">등록</button>
-                                    </div>
-                                </td>
-                                <th scope="row">본사명<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
+                                <th scope="row">결제자명</th>
+                                <td>홍길동</td>
                             </tr>
                             <tr>
-                                <th scope="row">사업자번호<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">사용료ID</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
+                                <th scope="row">고객사ID</th>
+                                <td>hyosung001</td>
                             </tr>
                             <tr>
-                                <th scope="row">부서명</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">담당자명</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">전화번호</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">휴대전화<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
+                                <th scope="row">결제번호</th>
+                                <td>1234567890</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-               
-                <div class="btn-box bottom">
-                    <button data-role="button" class="">등록</button>
+
+                <div class="btn-box bottom justify-content-between">
+                    <div class="left-group">
+                        <button data-role="button" class="gray-border">취소</button>
+                    </div>
+                    <div class="right-group">
+                        <button data-role="button" class="">복원</button>
+                    </div>
                 </div>
             </div>
         </div>
