--- a/pages/SA/SA070303_1.html
+++ b/pages/SA/SA070303_1.html
@@ -21,7 +21,7 @@
             </main>
         </div>
         <div data-role="dialog"
-             data-title="본사 등록/수정"
+             data-title="회원정보 해지"
              data-modal="false"
              data-bind="dialogOpen: isVisible,
                             events: { close: onClose}"
@@ -30,61 +30,47 @@
                 <div class="table">
                     <table>
                         <colgroup>
-                            <col width="90px">
+                            <col width="80px">
                             <col width="*">
-                            <col width="90px">
+                            <col width="80px">
+                            <col width="*">
+                            <col width="80px">
                             <col width="*">
                         </colgroup>
                         <tbody>
                             <tr>
-                                <th scope="row">본사ID<span class="required">*</span></th>
-                                <td>
-                                    <div class="form-set">
-                                        <input type="text" class="h-input" placeholder="" />
-                                        <button data-role="button" class="blue-border">등록</button>
-                                    </div>
-                                </td>
-                                <th scope="row">본사명<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">사업자번호<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">사용료ID</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">부서명</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">담당자명</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row">전화번호</th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
-                                <th scope="row">휴대전화<span class="required">*</span></th>
-                                <td>
-                                    <input type="text" class="h-input" placeholder="" />
-                                </td>
+                                <th scope="row">사업자번호</th>
+                                <td>123****5678</td>
+                                <th scope="row">계좌번호</th>
+                                <td>107****123445</td>
+                                <th scope="row">은행명</th>
+                                <td>산업은행</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-               
-                <div class="btn-box bottom">
-                    <button data-role="button" class="">등록</button>
+                <div class="table-set">
+                    <div class="alert-title">해당 회원을 해지하시겠습니까?</div>
+                    <ul class="list-box gray-box half has-bar">
+                        <li class="list">
+                            <span class="label">출금 대기</span>
+                            <span class="desc"><span class="point">3</span><span class="unit">건</span></span>
+                        </li>
+                        <li class="list">
+                            <span class="label">출금중</span>
+                            <span class="desc"><span class="point">2</span><span class="unit">건</span></span>
+                        </li>
+                    </ul>     
+                    <ul class="pop-guide">
+                        <li class="list">* 해지와 동시에 출금대기건은 삭제되며 출금중인 건은 정상적으로 처리됩니다.</li>
+                    </ul>
+                </div>
+                <div class="btn-box bottom justify-content-between">
+                    <button data-role="button" class="gray-border">취소</button>
+                    <div class="btn-box mt-0">
+                        <button data-role="button" class="light-blue">해지</button>
+                        <button data-role="button" class="">고액출금 삭제</button>
+                    </div>
                 </div>
             </div>
         </div>
