--- a/pages/SA/SA070601.html
+++ b/pages/SA/SA070601.html
@@ -63,41 +63,43 @@
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                         </div>
                         <div class="table-set">
+                            <!-- toolbar template -->
+                            <script type="text/x-kendo-template" class="toolbarTemplate">
+                                <div class="title-box sm">
+                                    <div class="left-group">
+                                        <span class="amount-set">
+                                            <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                                            <span class="amount">26</span><span class="unit">건</span>
+                                        </span>
+                                    </div>
+                                    <div class="right-group">
+                                        <div class="btn-box">
+                                            <button role="button" class="k-button"><span>이메일발송</span></button>
+                                            <button role="button" class="k-button light-blue"><span>수신거부관리</span></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </script>
+                            <!-- checkbox template -->
+                            <script type="text/x-kendo-template" class="checkboxTemplate">
+                                <div class="h-checkbox no-label">
+                                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                                    <label for="checkbox-nolabel"></label> 
+                                </div>
+                            </script>
                             <div class="table-content grid" id="viewModel_grid_sort">
-                                <!-- toolbar template -->
-                                <script type="text/x-kendo-template" class="toolbarTemplate">
-                                    <div class="title-box sm">
-                                        <div class="left-group">
-                                            <span class="amount-set">
-                                                <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                                <span class="amount">26</span><span class="unit">건</span>
-                                            </span>
-                                        </div>
-                                        <div class="right-group">
-                                            <div class="btn-box">
-                                                <button role="button" class="k-button"><span>이메일발송</span></button>
-                                                <button role="button" class="k-button light-blue"><span>수신거부관리</span></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </script>
-                                <!-- checkbox template -->
-                                <script type="text/x-kendo-template" class="checkboxTemplate">
-                                    <div class="h-checkbox no-label">
-                                        <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
-                                        <label for="checkbox-nolabel"></label> 
-                                    </div>
-                                </script>
                                 <div data-role="grid" 
                                     data-sortable="true" 
                                     data-editable="true" 
                                     data-toolbar="#=toolbarTemplate()#"
                                     data-columns='[
                                     { "title": "<div class=h-checkbox><input type=checkbox data-bind=checked: Discontinued id=checkbox-nolabel name=checkbox /><label for=checkbox-nolabel></label></div>", "width": 50, "template": "#=checkboxTemplate()#" },
-                                    { "title": "NO.", "width": 50 },
-                                
+                                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
                                     { "field": "기타"}
                                 ]' data-bind="source: gridSource">
+                                </div>
+                                <div class="table-bottom">
+                                    <button data-role="button" class="gray-border">삭제</button>
                                 </div>
                             </div>
                         </div>
