서비스품질>상담정보관리, 요청사항 관리, sms관리 팝업, 이메일관리, 서류양식관리

--- a/guide/elements/button.html
+++ b/guide/elements/button.html
@@ -116,7 +116,7 @@ data-index="0">
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
-&lt;div data-selection="multiple" data-role="buttongroup" class="multi">>
+&lt;div data-selection="multiple" data-role="buttongroup" class="multi">
     &lt;button>&lt;span>Button&lt;/span>&lt;/button>
     &lt;button>&lt;span>Button&lt;/span>&lt;/button>
     &lt;button>&lt;span>Button&lt;/span>&lt;/button>
