--- a/guide/elements/table.html
+++ b/guide/elements/table.html
@@ -141,6 +141,17 @@
         &lt;button data-role="button" class="gray-border">삭제&lt;/button>
     &lt;/div>
 &lt;/div>
+&lt;div class="table-footer">
+    &lt;ul class="pop-guide">
+        &lt;li class="list">- 승인서는 오픈 시 기본으로 1회 발송이 되며, 재발송을 위한 수동발송 기능이다.&lt;/li>
+        &lt;li class="list">- 승인서생성이 된 고객만 승인서발송이 가능하다.&lt;/li>
+        &lt;li class="list">- 발송수단을 '수단일괄변경'으로 전체 일괄 변경 가능하다.&lt;/li>
+        &lt;li class="list">- 발송수단 변경 시 해당 발송수단 정보가 없는 경우 발송할 수 없다.&lt;/li>
+    &lt;/ul>
+    &lt;div class="btn-box bottom">
+        &lt;button data-role="button">발송&lt;/button>
+    &lt;/div>
+&lt;/div>
 &lt;script>
     //grid
     var viewModel_grid = kendo.observable({
