--- a/guide/list.html
+++ b/guide/list.html
@@ -525,8 +525,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-19</td>
                     <td class="ex_end">08-19</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
                     <td class="state" data-state="ing"></td>
                     <td>퀵메뉴 있음</td>
                 </tr>
@@ -631,8 +631,8 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-23</td>
                     <td class="ex_end">08-23</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
                     <td class="state" data-state=""></td>
                     <td>popup(lg), 파일업로드</td>
                 </tr>
@@ -772,11 +772,11 @@
                     <td class="d3">02등록</td>
                     <td class="sbid"><span class="pc">SA030702</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-25</td>
+                    <td class="ex_end">08-25</td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md), 테이블 체크 확인</td>
                 </tr>
                 <tr class="">
@@ -818,7 +818,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">01상담정보관리</td>
                     <td class="d3">02상세</td>
@@ -826,12 +826,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-24</td>
                     <td class="ex_end">08-24</td>
-                    <!-- <td class="date_start">08-23</td>
-                    <td class="date_end">08-23</td>
-                    <td class="state" data-state=""></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 메뉴트리</td>
                 </tr>
                 <tr class="">
@@ -847,7 +844,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">02요청사항관리</td>
                     <td class="d3">02등록</td>
@@ -855,9 +852,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-24</td>
                     <td class="ex_end">08-24</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 첨부파일</td>
                 </tr>
                 <tr class="">
@@ -886,7 +883,7 @@
                     <td class="state" data-state="done"></td>
                     <td>popup(md)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">02요청사항관리</td>
                     <td class="d3">04상세정보</td>
@@ -894,12 +891,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-25</td>
                     <td class="ex_end">08-25</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 첨부파일</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">02요청사항관리</td>
                     <td class="d3">05계약변경심사처리상세</td>
@@ -907,9 +904,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-25</td>
                     <td class="ex_end">08-25</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 첨부파일</td>
                 </tr>
                 <tr class="">
@@ -925,7 +922,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">03민원조치</td>
                     <td class="d3">02해지계좌복원</td>
@@ -933,9 +930,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-25</td>
                     <td class="ex_end">08-25</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(md), 파일업로드</td>
                 </tr>
                 <tr class="">
@@ -1011,12 +1008,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-26</td>
                     <td class="ex_end">08-26</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md), 첨부파일추가</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">01발송</td>
@@ -1024,12 +1021,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-26</td>
                     <td class="ex_end">08-26</td>
-                    <!-- <td class="date_start">08-24</td>
-                    <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1040,15 +1034,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-26</td>
                     <td class="ex_end">08-26</td>
-                    <!-- <td class="date_start">08-24</td>
+                    <td class="date_start">08-24</td>
                     <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(xsm)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">01발송_02엑셀업로드</td>
@@ -1056,12 +1047,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-26</td>
                     <td class="ex_end">08-26</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-24</td>
+                    <td class="date_end">08-24</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(sm), 파일첨부</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">02메세지설정</td>
@@ -1069,15 +1060,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-26</td>
                     <td class="ex_end">08-26</td>
-                    <!-- <td class="date_start">08-24</td>
-                    <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">05SMS관리</td>
                     <td class="d3">03발송현황</td>
@@ -1085,12 +1073,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <!-- <td class="date_start">08-24</td>
-                    <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1127,9 +1112,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
                 <tr class="do">
@@ -1140,25 +1125,22 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>파일 업로드</td>
                 </tr>
                 <tr class="">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">06이메일관리</td>
-                    <td class="d3">02이메일발송_03수신거부관리</td>
+                    <td class="d3">03수신거부관리</td>
                     <td class="sbid"><span class="pc">SA070603</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <!-- <td class="date_start">08-24</td>
+                    <td class="date_start">08-24</td>
                     <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -1174,7 +1156,7 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">07서류양식관리</td>
                     <td class="d3">02상세</td>
@@ -1182,12 +1164,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <!-- <td class="date_start">08-24</td>
-                    <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md)</td>
                 </tr>
                 <tr class="do">
@@ -1198,9 +1177,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-27</td>
                     <td class="ex_end">08-27</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md), 첨부파일추가</td>
                 </tr>
                 <tr class="">
@@ -1211,12 +1190,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
-                    <!-- <td class="date_start">08-24</td>
+                    <td class="date_start">08-24</td>
                     <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -1227,15 +1203,12 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
-                    <!-- <td class="date_start">08-24</td>
+                    <td class="date_start">08-24</td>
                     <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="">
+                <tr class="do">
                     <td class="d1">07서비스품질</td>
                     <td class="d2">10동의자료확인</td>
                     <td class="d3">01조회</td>
@@ -1243,12 +1216,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-30</td>
                     <td class="ex_end">08-30</td>
-                    <!-- <td class="date_start">08-24</td>
-                    <td class="date_end">08-24</td>
-                    <td class="state" data-state="ing"></td> -->
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-25</td>
+                    <td class="date_end">08-25</td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
             </tbody>
