--- a/pages/SA/SA070901.html
+++ b/pages/SA/SA070901.html
@@ -21,7 +21,7 @@
                 <div class="contents-header">
                     <div class="title-box lg">
                         <div class="left-group">
-                            <h2 class="main-title">공지사항 관리</h2>
+                            <h2 class="main-title">사후점검 제출확인</h2>
                             <span class="h-ico lg tip ml-8"
                                 title="툴팁 메세지 입니다."
                                 data-role="tooltip"
@@ -37,7 +37,7 @@
                                 data-navigational=true,
                                 data-items='[
                             { type:"rootitem", href: "", text: "서비스품질", showText: true },
-                            { type:"item", href: "", text: "요청사항 관리", showText: true}
+                            { type:"item", href: "", text: "사후점검 제출확인", showText: true}
                          ]'/>
                         </div>
                     </div>
@@ -48,51 +48,57 @@
                     <div class="table-group">
                         <div class="search-control">
                             <div class="form-group">
-                                <span class="label">검색항목</span>
+                                <span class="label">대상일</span>
                                 <div class="form-set">
-                                    <select data-role="dropdownlist" data-value="전체" data-option-label="전체" class="sm">
+                                    <input data-role="datepicker" 
+                                        data-format="yyyy/MM/dd"
+                                        placeholder="yyyymmdd" 
+                                        data-culture="ko-KR"
+                                        data-footer="false"
+                                        class="datepicker sm" /> 
+                                </div>
+                                <span class="label">동의상태</span>
+                                <div class="form-set">
+                                    <select data-role="dropdownlist" data-value="대기" data-option-label="대기" class="sm">
                                         <option value="1">온라인</option>
                                         <option value="2">오프라인</option>
                                     </select>
-                                    <div class="input-set search lg">
-                                        <input type="text" class="h-input" placeholder="입력해주세요">
-                                    </div>
                                 </div>
                             </div>
+                            
                             <button type="submit" data-role="button" class="search" data-icon="search-blue"><span>검색</span></button>
                         </div>
                         <div class="table-set">
-                            <div class="title-box sm">
-                                <div class="left-group">
-                                    <span class="amount-set">
-                                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
-                                        <span class="amount">26</span><span class="unit">건</span>
-                                    </span>
-                                </div>
-                                <div class="right-group">
-                                    <div class="btn-box">
-                                        <button data-role="button">요청사항등록</button>
-                                        <button data-role="button" class="green">엑셀</button>
+                            <script type="text/x-kendo-template" class="toolbarTemplate">
+                                <div class="title-box sm">
+                                    <div class="left-group">
+                                        <span class="amount-set">
+                                            <span class="amount current">1</span><span class="unit">건</span>
+                                        </span>
+                                    </div>
+                                    <div class="right-group">
+                                        <div class="btn-box">
+                                            <button role="button" class="k-button green"><span>엑셀</span></button>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="table-content grid">
-                                <div data-role="grid" data-sortable="true" data-editable="false" data-columns='[
-                                    { "field": "N", "width": 50 },
-                                    { "field": "NO", "width": 50 },
-                                    { "field": "상품코드", "width": 90 },
-                                    { "field": "상품명", "width": 170 },
-                                    { "field": "어플리케이션", "width": 146 },
-                                    { "field": "표준가격", "width": 140 },
-                                    { "field": "최소가격", "width": 146 },
-                                    { "field": "승인상태", "width": 140 },
-                                    { "field": "사용가능업종", "width": 140 },
-                                    { "field": "등록일", "width": 120 },
-                                    { "field": "종료일", "width": 120 }
-                                ]' data-bind="source: gridSource">
+                            </script>
+                            <script type="text/x-kendo-template" class="checkboxTemplate">
+                                <div class="h-checkbox no-label">
+                                    <input type="checkbox" data-bind="checked: Discontinued" id="checkbox-nolabel" name="checkbox" />
+                                    <label for="checkbox-nolabel"></label> 
                                 </div>
-                                <div class="table-bottom">
-                                    <button data-role="button" class="gray-border">삭제</button>
+                            </script>
+                            <div class="table-content grid">
+                                <div data-role="grid" 
+                                    data-sortable="true" 
+                                    data-editable="true" 
+                                    data-columns='[
+                                    { "title": "NO.", "field": "NO", "width": 50, "attributes" : {"class": "text-center"}, "sortable": false  },
+                                    { "field": ""  }
+                                    ]' 
+                                    data-bind="source: gridSource"
+                                    data-toolbar="#=toolbarTemplate()#">
                                 </div>
                             </div>
                         </div>
@@ -112,15 +118,25 @@
     <script>
             var viewModel = kendo.observable({
                 gridSource: [
-                    { "N":"ch", "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
-                    { "N":"ch", "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
+                    { "NO":"1",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                    { "NO":"2",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" },
+                    { "NO":"3",  "상품코드":"00001","상품명":"효성CMS", "어플리케이션":"CMS","표준가격":"100,000 원","최소가격":"80,000 원","승인상태":"승인완료","사용가능업종":"전업종","등록일":"2020/12/31","종료일":"2020/12/31" }
                 ],
                 displayGridSource: function() {
                     return stringify(this.get("gridSource").toJSON());
                 },
             });
             kendo.bind($(".wrap"), viewModel);
+            function toolbarTemplate() {
+                var template = kendo.template($('.toolbarTemplate').html());
+                var result = template({});
+                return result
+            }
+            function checkboxTemplate() {
+                var template = kendo.template($('.checkboxTemplate').html());
+                var result = template({});
+                return result
+            }
     </script>
 </body>
 
